# opaque

./: .gitignore  LICENSE  README.md  cabal.project  opaque.cabal
lib/Data/: Opaque.hs
